# Genesis-Assembler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.bat  test.txt
app/: CMakeLists.txt  assembler.c
asm/: asm.c  asm.h  assembler.c  lexer.c  lexer.h  regex.c  regex.h
debug/: debug.h
src/: CMakeLists.txt  asm.c  asm.h  functions.c  genesis.c  genesis.h  lexer.c  lexer.h
src/errors/: CMakeLists.txt  errors.c  errors.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.c
